<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.aravi.thsensoraynctask.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/humidityFieldID"
        android:layout_width="173dp"
        android:layout_height="44dp"
        android:cursorVisible="false"
        android:defaultFocusHighlightEnabled="false"
        android:ems="10"
        android:inputType="number"
        android:text="@string/defaultval"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="30dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="131dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/editText6"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="31dp"
        app:layout_constraintHorizontal_bias="1.0"
        tools:layout_editor_absoluteY="120dp"
        tools:layout_editor_absoluteX="207dp" />

    <EditText
        android:id="@+id/activityFieldId"
        android:layout_width="165dp"
        android:layout_height="43dp"
        android:cursorVisible="false"
        android:defaultFocusHighlightEnabled="false"
        android:ems="10"
        android:inputType="number"
        android:text="@string/defaultval"
        android:layout_marginStart="28dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/editText5"
        android:layout_marginEnd="28dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="64dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="69dp"
        app:layout_constraintTop_toTopOf="@+id/humidityFieldID"
        app:layout_constraintLeft_toRightOf="@+id/generateButtonId"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/sensorreadingsId"
        android:layout_width="174dp"
        android:layout_height="50dp"
        android:cursorVisible="false"
        android:defaultFocusHighlightEnabled="false"
        android:ems="10"
        android:inputType="number"
        android:text="@string/defaultval"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/activityFieldId"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/activityFieldId"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/activityFieldId"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:background="@android:color/transparent"
        android:defaultFocusHighlightEnabled="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="@string/humidity"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/activityFieldId"
        app:layout_constraintRight_toRightOf="@+id/generateButtonId"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText6" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:background="@android:color/transparent"
        android:defaultFocusHighlightEnabled="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="@string/activity"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/editText5"
        android:layout_marginEnd="19dp"
        app:layout_constraintRight_toRightOf="@+id/editText5"
        android:layout_marginTop="68dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="71dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText7"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="19dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="214dp"
        android:layout_height="51dp"
        android:background="@android:color/transparent"
        android:defaultFocusHighlightEnabled="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="@string/sensorreadings"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintRight_toLeftOf="@+id/sensorreadingsId"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/generateButtonId"
        android:layout_marginTop="126dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="127dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/humidityFieldID"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="18dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.013"
        tools:layout_editor_absoluteX="6dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/header"
        android:textAlignment="center"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="2dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="179dp"
        android:layout_height="49dp"
        android:background="@android:color/transparent"
        android:defaultFocusHighlightEnabled="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="@string/temperature"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/humidityFieldID"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/temperatureFieldID"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:cursorVisible="false"
        android:defaultFocusHighlightEnabled="false"
        android:ems="10"
        android:inputType="number"
        tools:text="@string/defaultval"
        android:layout_marginStart="28dp"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="25dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/editText7"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="25dp" />

    <Button
        android:id="@+id/generateButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generateButton"
        app:layout_constraintBaseline_toBaselineOf="@+id/cancelButtonId"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="89dp"
        app:layout_constraintRight_toRightOf="@+id/progressBarId"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="89dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/cancelButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelButton"
        android:layout_marginEnd="51dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/temperatureFieldID"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="193dp"
        app:layout_constraintLeft_toRightOf="@+id/editText2"
        android:layout_marginLeft="51dp"
        android:layout_marginRight="51dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/outputFieldId"
        android:layout_width="250dp"
        android:layout_height="66dp"
        android:gravity="bottom"
        android:scrollIndicators="bottom|right"
        android:scrollbars="vertical"
        android:text="TextView"
        app:layout_constraintRight_toLeftOf="@+id/cancelButtonId"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="83dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="84dp"
        app:layout_constraintLeft_toLeftOf="@+id/generateButtonId"
        app:layout_constraintTop_toTopOf="@+id/progressBarId"
        android:layout_marginRight="6dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBarId"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:visibility="invisible"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
